--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
+<h1>Column to Row</h1>
 <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="start center" fxLayoutAlign.gt-sm="center start">
-  <div class="row" fxFlex="50%" fxFlex.gt-sm="75%">Item 1</div>
-  <div class="row" fxFlex="50%" fxFlex.gt-sm="25%">Item 2</div>
-  
+  <div class="row" fxFlex="50%" fxFlex.gt-sm="70%">Item 1</div>
+  <div class="row" fxFlex="50%" fxFlex.gt-sm="30%">Item 2</div>
+</div>
+
+<h1>Row to Column</h1>
+<div fxLayout="row" fxLayout.gt-sm="column" fxLayoutAlign="start center" fxLayoutAlign.gt-sm="center start">
+  <div class="row" fxFlex.gt-sm="30%">conteudo 1</div>
+  <div class="row" fxFlex.gt-sm="30%">conteudo 2</div>
+  <div class="row" fxFlex.gt-sm="30%">conteudo 3</div>
 </div>
